1.8.7
-----
1. Also set 'caret-color' to active colour when indicating playlist name already
   exists.

1.8.6
-----
 1. Translation updates.
 2. Spelling fixes.
 3. Ignore repeated keypresses less than 100ms apart.
 4. Map icon for Sprocket plugin.
 5. When mapping icons and looking if image ends with a value also check for
    value + '/image.png'
 6. Fix mapping of mysqueezebox.com apps when using local LMS image proxy.
 7. Close track information dialog on 'esc' or back button.
 8. Update rating display if current setting, or calculated value, differs from
    previous.
 9. Allow to set custom actions for now-playing cover context menu.
10. Add action to 'Zap' play queue items.
11. Don't close 'More' list when clicking radio stream skip actions.
12. When saving the queue, don't use error text colour to indicate that a
    playlist with that name exists - looks odd if saving queue to its existing
    name.
13. Show name of currently loaded playlist in queue view.
14. Use asterisk next to queue's playlist name to indicate it has been modified.
15. Refresh 'New Music' after scan complete.
16. Don't navigate back in browse view on 'esc' press if a dialog was closed
    250ms (or less) ago.

1.8.5
-----
 1. Better redhat icon.
 2. Map icons for 'Sounds & Effects', Napster, and SHOUTcast.
 3. Fix showing folder icon for favourites folder.
 4. Allow navigating into empty favourites folder.
 5. Re-filter jumplist on window height changes.
 6. Show a message when rescan activated.
 7. Add API to get list of active (on and playing) players.
 8. When moving queue, move to all players synced with dest and restore sync
    group of source player.
 9. Provide option to copy, as well as move, queue to another player.
10. Remove vuetify-confirm
11. Hacky fix for browse view navigating back when photo viewer closed.
12. Correctly supply role_id when requesing 'All Songs'
13. If sorting an artist's albums by year, then when list 'All Songs' also sort
    these by year.