@@ -2,6 +2,7 @@
 -----
 1. Also set 'caret-color' to active colour when indicating playlist name already
    exists.
+2. Open browse and queue menus on right-click.
 
 1.8.6
 -----
